--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,21 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".aboutlog.StartActivity"
+            android:exported="false" />
+        <activity
+            android:name=".aboutlog.LoadingActivity"
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+        <activity
+            android:name=".aboutlog.LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".CalendarActivity"
             android:exported="true" /> <!-- Updated to true for Android 12+ compatibility -->
         <activity
@@ -30,11 +45,7 @@
             android:exported="true" /> <!-- Updated to true for Android 12+ compatibility -->
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"/>
     </application>
+
 </manifest>
